--- a/1_wqdata/src/2_combined_wqp_munge.Rmd
+++ b/1_wqdata/src/2_combined_wqp_munge.Rmd
@@ -40,7 +40,6 @@ The vast majority of water quality portal data (> 80% ) that we have gathered is
 #This takes kind of a long time so we will use foreach to run the analyses in parallel. 
 
 
-
 #single and multiple obs harmonization that will live inside the next function. 
 pluribus <- function(dt,x,...){
   #seperate out the data that has only 1 obs at unique site, datetime, and parameter combination. 
@@ -52,9 +51,20 @@ pluribus <- function(dt,x,...){
   
   dt.singles <- dt %>%
     anti_join(dt.not.unique)
+  
+  #Okay lots of thos have the same exact information. 
+  #We can get rid of those kinds of duplicates with a simple distinct call
+  dt.distinct.okay <- dt %>%
+    inner_join(dt.not.unique) %>% 
+    filter(duplicated(.)) 
+
+  dt.distinct.not.okay <- dt %>%
+    inner_join(dt.not.unique) %>%
+    anti_join(dt.distinct.okay %>%
+                select_('SiteID','harmonized_parameter',...))
 
   #What should we do with multiple data for the same site, time, and parameter? 
-  dt.multiples <- dt %>%
+  dt.multiples <- dt.distinct.not.okay %>%
     inner_join(dt.not.unique) %>%
     #The dots are so that the user can switch between datetime or date
     group_by_('SiteID','harmonized_parameter',...) %>%
@@ -71,8 +81,11 @@ pluribus <- function(dt,x,...){
     dplyr::select(-median,-cv,-count) %>%
     ungroup()
   
-  return(rbind(dt.singles,dt.multiples))
+  return(rbind(dt.singles,dt.distinct.okay,dt.multiples) %>%
+           #Last bit of paranoia to catch any NAs or doubles that sneak through
+           distinct_('SiteID','harmonized_parameter',...,.keep_all=T))
 }
+
 
 #Function to split out data with date_time or date and time. 
  
@@ -115,6 +128,13 @@ file.names <- c('chl.a','doc','sand','secchi','tis','tss1','tss2')
 
 file.df.all <- tibble(path=harmonized.files,names=file.names)
 ```
+
+
+```{r}
+secchi_unity <- date.time.splitter(file.df.all$path[4])
+
+```
+
 
 
 ### Dropping and taking median of all samples
