--- a/3_rswqjoin/src/1_rswq_summary.Rmd
+++ b/3_rswqjoin/src/1_rswq_summary.Rmd
@@ -3,6 +3,8 @@ title: "1_rswq_summary"
 author: "Matthew Ross"
 date: "6/18/2018"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 
@@ -22,34 +24,48 @@ knitr::opts_knit$set(root.dir='../..')
 ```{r download}
 sr_match <- drive_ls('sr_matchups')
 
-down.paths <- paste0('3_rswqjoin/data/in/',sr_match$name)
+down.paths <- paste0('3_rswqjoin/data/in/sr/',sr_match$name)
 
 
-for(i in 1:nrow(sr_match)){
-  drive_download(as_id(sr_match$id[i]),path=down.paths[i],overwrite = T)
+if(length(list.files('3_rswqjoin/data/in/sr') <= length(down.paths))){
+  print('All files downloaded')
+}else{
+  print('Downloading all files')
+  for(i in 1:nrow(sr_match)){
+    drive_download(as_id(sr_match$id[i]),path=down.paths[i],overwrite = T)
+  }
 }
 
+#The long string of letters is readr's sweet way of compressing Column types
+#I'm forcing them here because the first file happens to be all NAs 
+# so all columns get coerced to character
+sr <- map_df(down.paths,read_csv,col_types='icnnDTnnnnninnnnninnnnc')
 
 ```
 
 
 
-### Not so cloudy
+### full data
 
 ```{r}
 
+#Read in the in situ data
+wide.pull <- read_feather('2_rsdata/out/wide_pull.feather') 
+
+#Join reflectance to in situ with some very minor pixelCount and cloudiness filters
+sr.clean <- sr %>%
+  filter(!is.na(green))  %>%
+  inner_join(wide.pull %>%
+    rename(path=PATH) %>%
+    rename(row=ROW),
+    by=c('SiteID','date','sat','date_unity','path','row')) 
+
+
+
+save(sr.clean,file='3_rswqjoin/data/out/sr_insitu.RData')
+
 ```
 
 
-
-### Not so much glint
-
-```{r}
-
-```
-
-
-
-### Secchi 
 
 
