--- a/9_report/src/aquasat_outline.Rmd
+++ b/9_report/src/aquasat_outline.Rmd
@@ -4,7 +4,8 @@ author: "Matthew Ross"
 date: "7/2/2018"
 output:
   html_document:
-    toc: yes
+    toc: true
+    toc_float:  true
   pdf_document:
     toc: yes
 editor_options:
@@ -25,14 +26,17 @@ library(ggthemes)
 library(sf)
 library(USAboundaries)
 library(scales)
+library(broom)
+library(ggpmisc)
 
 
-knitr::opts_chunk$set(echo = FALSE)
+
+knitr::opts_chunk$set(echo = FALSE,warning=F)
 knitr::opts_knit$set(root.dir='../..')
 
 lagos <- lagosne_load("1.087.1")
 
-theme_set(theme_bw(base_size=12))
+theme_set(theme_bw(base_size=14))
 theme_update(
           panel.grid.major = element_line(color='transparent'),
         panel.grid.minor = element_blank()) 
@@ -122,16 +126,14 @@ For LAGOSNE data see [here](https://lagoslakes.org/the-lagos-database/)
 ## Dataset description
 
 ```{r , echo=FALSE, fig.cap="Dataset generation", out.width = '100%'}
-knitr::include_graphics("9_report/src/Watersat_Drop_flow.png")
-
+knitr::include_graphics(paste0(getwd(),"/9_report/src/Watersat_Drop_flow.png"))
 ```
 
 
-### Full harmonized water quality portal and LAGOSNE dataset
 
-
-```{r}
+```{r data read in}
 wqp.all <- read_feather('1_wqdata/out/wqp_lagos_unity.feather')
+
 
 
 full.inv <- read_feather('1_wqdata/out/wqp_inventory.feather') %>%
@@ -171,18 +173,8 @@ count.kable <- function(df){
   kable(.,format.args = list(big.mark = ","))
 }
 
-
-
-count.kable(wqp.inv)
-
-
-
-```
-
-
 ### Landsat visible sites including lagos
 
-```{r}
 load('3_rswqjoin/data/out/sr_insitu.RData')
 
 
@@ -192,15 +184,15 @@ sr.type <- sr.clean %>%
   filter(type != 'Facility') %>%
   ungroup()
 
+
+
 ```
 
 
 
+### Map
 
-
-## Map
-
-```{r eval=F,fig.width=8,fig.height=10}
+```{r,fig.width=8,fig.height=10, fig.cap='Distribution of observations across the conterminous USA. The data is split by observation type, where total represents an overpass for any of the four primary parameters'}
 
 # Get a total number of counts by site and lat long.
 # We round lat long to prevent plotting 80,000 points 
@@ -246,19 +238,35 @@ total.sf <- st_as_sf(all.counts,coords=c('roundlong','roundlat'),crs=4326) %>%
 total.sf.usa <- total.sf[usa,] 
 
 
+#Functino to turn geometry into lat longs for stat_hex
+sfc_as_cols <- function(x, names = c("x","y")) {
+  stopifnot(inherits(x,"sf") && inherits(sf::st_geometry(x),"sfc_POINT"))
+  ret <- do.call(rbind,sf::st_geometry(x))
+  ret <- tibble::as_tibble(ret)
+  stopifnot(length(names) == ncol(ret))
+  ret <- setNames(ret,names)
+  dplyr::bind_cols(x,ret)
+}
+
+total.sf.lat <- sfc_as_cols(total.sf.usa)
+#Map with hex plots summing over the number of overpasses. 
 ggplot() + 
-  geom_sf(data=usa,fill='gray10') + 
-  geom_sf(data=total.sf.usa %>%
-            sample_frac(1),aes(color=log10(overpasses))) + 
+  geom_sf(data=usa,fill='white') + 
+  stat_summary_hex(data=total.sf.lat,
+          aes(x,y,z=overpasses),
+          bins=50,fun=sum)  +
   facet_wrap(~parameter,ncol=2) + 
-  theme(legend.position = c(.8,.2)) + 
+  theme(legend.position = c(.75,.15)) + 
   theme(panel.grid.major = element_line(color='transparent'),
         panel.grid.minor = element_blank(),
         panel.background = element_blank(), 
         axis.line = element_line(colour = "black")) + 
-  scale_color_gradient2(low='blue',mid='gray90',high='red',midpoint=log10(50),
-                        breaks=c(0,1,2,3),labels=c('1','10','100','1,000'),
-                        name='Overpasses')
+  scale_fill_gradient2(low='blue',mid='gray50',high='red',midpoint=log10(100),
+                       breaks=c(1,10,100,1000,10000),
+                       labels=c('1','10','100','1,000','10,000'),
+                       name='Matchups',trans='log10') +
+  ylab('') + 
+  xlab('')
 
 ```
 
@@ -266,9 +274,10 @@ ggplot() +
 
 ```{r,fig.height=6,fig.width=8}
 
-
+#Set colors by type
 type.cols <- c('#a6cee3','#33a02c','#1f78b4')
 
+#get site counts 
 sr.counts <- sr.type %>%
   select(tss,secchi,chl_a,doc,SiteID,date_unity,type,lat,long) %>% 
   gather(key=parameter,value=value,-SiteID,-date_unity,-type,-lat,-long) %>%
@@ -279,18 +288,9 @@ sr.counts <- sr.type %>%
   ungroup() %>%
   filter(count != 0)
 
-
-#Optional table output
-count.kable(sr.type %>%
-  select(SiteID,date_unity,type,tss,doc,chl_a,secchi))
-
-
-```
-
-```{r}
-
+#Plot
 ggplot(sr.counts,aes(x=count,fill=type)) +
-  geom_histogram() + 
+  geom_histogram(bins=25) + 
   facet_wrap(~parameter,scales='free_y') +
   scale_x_log10(breaks=c(1,10,100,1000)) + 
   xlab('Number of observations at site') +
@@ -302,11 +302,14 @@ ggplot(sr.counts,aes(x=count,fill=type)) +
 ```
 
 
-### Obervations over time
+### Observations over time
 
-```{r}
+```{r,fig.width=8,fig.height=3.5}
 
+#Choose colors for each parameter
 parameter.cols <- c('gray40','#2e8b57','#e8a766','#583a1c')
+
+#Get yearly counts for each parameter for overpasses
 matchup.yearly.counts <- sr.type %>%
   mutate(year = year(date_unity)) %>%
   select(SiteID,year,chl_a,tss,doc,secchi,type) %>%
@@ -314,8 +317,9 @@ matchup.yearly.counts <- sr.type %>%
   filter(!is.na(value)) %>%
   group_by(parameter,year) %>%
   summarize(count=n()) %>%
-  mutate(datasource='Landsat Matchups')
+  mutate(datasource='Landsat matchups')
 
+#Same for full in situ dataset
 wqp.yearly.counts <- wqp.inv %>%
   mutate(year = year(date_unity)) %>%
   select(SiteID,year,chl_a,tss,doc,secchi,type) %>%
@@ -325,64 +329,132 @@ wqp.yearly.counts <- wqp.inv %>%
   summarize(count=n()) %>%
   filter(year < 2019 & year > 1984) %>%
   mutate(datasource='LAGOSNE + WQP') 
-  
+
+#Bind datasets together
 yearly.counts.all <- rbind(matchup.yearly.counts,wqp.yearly.counts)
 
+#Plot side by side
 yearly.counts.all %>%
   ungroup() %>%
     mutate(parameter=factor(parameter,levels=c('secchi','chl_a','tss','doc'))) %>%
   ggplot(., aes(x=year,y=count,fill=parameter)) + 
            geom_bar(position='stack',stat='identity') + 
   scale_fill_manual(values=parameter.cols,name='') + 
-  theme(legend.position=c(0.65,0.7)) + 
-  facet_wrap(~datasource)
+  theme(legend.position=c(0.65,0.7),
+        axis.text.y=element_text(angle=90,hjust=0.5)) + 
+  facet_wrap(~datasource) + 
+  ylab('Count') + 
+  xlab('Year') +
+  scale_y_continuous(breaks=c(0,100000,200000,300000), 
+                     labels=c(0,'100,000','200,000','300,000')) 
 ```
 
 
+## Variation captured by the datasets
 
-## In Situ Distribution of data
+### Distributions of in situ vs matchup datasets
 
-```{r,fig.height=5,fig.width=5}
+```{r,fig.height=7,fig.width=7}
+
+param.units <- tibble(parameter = c('chl_a','doc','secchi','tss'),
+                      param_units = c('chl_a (ug/L)',
+                                      'doc (mg/L)',
+                                      'secchi (m)',
+                                      'tss (mg/L)'))
+
+#Make a function to prepare datasets for plotting. Limit datasets to a range of greater than 10^-4
 hist.data.prep <- function(x){
   out <- x  %>%
-  select(SiteID,date_unity,tss,chl_a,secchi,doc) %>%
-  gather(key=parameter,value=value,-SiteID,-date_unity) %>%
+  select(SiteID,date_unity,type,tss,chl_a,secchi,doc) %>%
+  gather(key=parameter,value=value,-SiteID,-date_unity,-type) %>%
   filter(!is.na(value)) %>%
-  filter( value > 0.01 & value < 30000) 
+  filter(value > 0.0001) %>%
+  left_join(param.units,by='parameter')
 }
-  
+
 matchup.hist <- hist.data.prep(sr.type) %>%
-  mutate(Dataset='Matchup Data')
-insitu.hist <- hist.data.prep(wqp.all) %>%
+  mutate(Dataset='Landsat matchups')
+insitu.hist <- hist.data.prep(wqp.inv) %>%
   mutate(Dataset='LAGOSNE + WQP')
 
 
-ggplot(rbind(matchup.hist,insitu.hist),aes(value,fill=Dataset)) + 
-  facet_wrap(~parameter,scales='free') +
+# Cut the data into quantiles
+q.cut.percents = c(0,0.05,.25,.5,0.75,.95,1)
+q.cut.labels = c('<5%','5-25%','25-50%','50-75%','75-95%','>95%')
+#Setup a colorpalette
+quantile.colors <- RColorBrewer::brewer.pal(length(q.cut.percents)+2,'GnBu')[-c(1:2)]
+
+
+#Matchup quantiles
+matchup.quantiles <-  matchup.hist %>%
+  group_by(param_units) %>%
+  filter(value > 0 & !is.na(value)) %>%
+  mutate(q.values = cut(value,quantile(value,q.cut.percents),
+                        labels=q.cut.labels)) %>%
+  group_by(param_units,q.values) %>%
+  summarize(cut.max=max(value,na.rm=T),
+            cut.min=min(value,na.rm=T),
+            count=n()) %>%
+  filter(!is.na(q.values))
+
+
+
+ggplot() +
+  geom_rect(data=matchup.quantiles,
+            aes(xmin=cut.min,
+                xmax=cut.max,
+                ymin=1,
+                ymax=10^11,
+                fill=q.values),
+            color=NA) +
+  facet_wrap(~param_units,scales='free') +
   scale_x_log10(breaks=trans_breaks("log10", function(x) 10^x),
               labels = trans_format("log10", math_format(10^.x))) +
   scale_y_log10(breaks=trans_breaks("log10", function(x) 10^x),
-              labels = trans_format("log10", math_format(10^.x))) + 
-  geom_histogram(color='black',bins=50) + 
-  scale_fill_manual(values=c('gray40','red3'),name='') + 
-  theme(legend.position = 'top',legend.direction = 'horizontal')
+              labels = trans_format("log10", math_format(10^.x))) +
+  geom_histogram(data=rbind(matchup.hist,insitu.hist),
+       aes(x=value,color=Dataset),
+       fill='gray50',
+       bins=50,
+       size=1) + 
+  scale_fill_manual(values=quantile.colors,name='Quantiles') +
+  scale_color_manual(values=c('black','red3'),name='Dataset') + 
+  theme(legend.position = 'top',legend.direction = 'horizontal',legend.box='vertical') +
+  ylab('Count') + 
+  xlab('Depth or Concentration') +
+  guides(fill=guide_legend(byrow=T))
+
+
+
+```
+
+### Observations lost 
+
+For both DOC and TSS our matchup dataset is missing the long tail of data in the in situ dataset. What kind of sites were dropped to create this discrepancy?
+They are basically all streams.
+```{r}
+#For doc the dropoff of data is above 10^2 and tss is 10^4.5
+
+missing.matchups <- insitu.hist %>%
+  filter(parameter %in% c('doc','tss')) %>%
+  filter(parameter == 'doc' & value > 10^2 |
+        parameter == 'tss' & value > 10^4.5)
+
+table(missing.matchups$type)
 
 ```
 
 
-
-## Spectral library
-
-
-### All parameters no type breakdown
+### Spectral variation
 
 ```{r, fig.width=8,fig.height=6}
+#Create some simple quality filters and a long dataset with bands arranged in a long format. 
 sr.long.median <-  sr.type %>%
   mutate(ndvi=(nir-red)/(nir+red)) %>%
   filter(ndvi < 0.6) %>%
   filter(swir2 < 600) %>%
-  filter(clouds < 30) %>%
-  filter(pixelCount > 6) %>%
+  filter(clouds < 40) %>%
+  filter(pixelCount > 9) %>%
   #For the library plots lets only keep sameday matchups
   select(SiteID,date_unity,lat,long,date,type,blue,green,red,nir,swir1,swir2,tss,chl_a,doc,secchi) %>%
   gather(key=band,value=refl,-SiteID,-date,-date_unity,-type,-tss,-chl_a,-doc,-secchi,-lat,-long) %>%
@@ -390,180 +462,144 @@ sr.long.median <-  sr.type %>%
   mutate(type=factor(type,levels=c('Stream','Estuary','Lake'))) %>%
   filter(refl > 0 )
 
-q.cut.percents = c(0,.3,.6,.8,.9,.95,1)
 
 sr.long.same <- sr.long.median %>%
+  filter(date == as.Date(date_unity)) %>%
   mutate(tss.bin=cut(tss,
-                     breaks=c(min(tss,na.rm=T),20,100,max(tss,na.rm=T)),
-                     labels=c('< 20 mg/L','20-100 mg/L','>100 mg/L'))) %>%
+                     breaks=c(min(tss,na.rm=T),10,50,max(tss,na.rm=T)),
+                     labels=c('< 10 mg/L','10-50 mg/L','>50 mg/L'))) %>%
   mutate(tss.keep=tss) %>%
   gather(key=parameter,value=value,-SiteID,-date_unity,
          -date,-band,-refl,-type,-tss.bin,-lat,-long,-tss.keep) %>%
   group_by(parameter) %>%
-  filter(value > 0) %>%
-  filter(log10(value) > (mean(log10(value),na.rm=T)-
-                           sd(log10(value),na.rm=T)*2),
-         log10(value) < (mean(log10(value),na.rm=T)+
-                           sd(log10(value),na.rm=T)*2)) %>%
-  mutate(quintiles=cut(log(value),
-                       quantile(log(value),q.cut.percents),
-                       labels=c('0-30%','30-60%','60-80%','80-90%','90-95%','>95%'))) %>%
-  mutate(quintile.cut.value = cut(log(value),q.cut.percents)) %>%
+  filter(value > 0.001) %>%
+  mutate(quintiles=cut(value,
+                       quantile((value),q.cut.percents),
+                       labels=q.cut.labels)) %>%
+  mutate(quintile.cut.value = cut((value),q.cut.percents)) %>%
   ungroup() %>%
   filter(!is.na(quintiles)) %>%
-  mutate(quintiles=factor(quintiles,levels=c('0-30%','30-60%','60-80%','80-90%','90-95%','>95%')))
+  mutate(quintiles=factor(quintiles,levels=q.cut.labels))
 
-quantile.colors <- RColorBrewer::brewer.pal(length(unique(sr.long.same$quintiles)),'GnBu')
-
-png(filename='9_report/figures/quantilebins.png',width=8,height=6,units='in',res=250)
-  sr.long.same %>%
-  group_by(parameter) %>%
+#Plot data by quantile and band
+sr.long.same %>%
   ggplot(.,aes(x=band,y=refl,fill=quintiles)) +
   ylim(0,1500) +
   geom_boxplot(outlier.shape=NA,position='dodge') +
   facet_wrap(~parameter) + 
   scale_fill_manual(values=quantile.colors,name='') + 
-  theme(legend.position=c(0.25,0.91),legend.direction = 'horizontal')
-dev.off()
+  theme(legend.position=c(0.25,0.91),legend.direction = 'horizontal') +
+  ylab('Surface reflectance') +
+  xlab('Band')+
+  guides(fill=guide_legend(byrow=T))
 ```
 
+## Partitioning variation by sediment concentration and region
 
+### TSS covarying with other constituents
 
-### Breakdown of other parameters with low and high tss
-LOW TSS vs High TSS actually not that different, but this alone is a  results
-```{r}
+```{r,fig.width=8,fig.height=4}
 
 
 sr.breakdown <- sr.long.same %>%
-  filter(!is.na(tss.bin)) 
-
-png(filename='9_report/figures/tssbins.png',width=8,height=10,units='in',res=250)
-sr.breakdown %>%
-  filter(parameter != 'tss') %>%
-  group_by(band,parameter,tss.bin,quintiles) %>%
-  summarize(refl=median(refl,na.rm=T),
-            count=n()) %>%
-  ungroup() %>%
-  filter(count > 20) %>%
-  ggplot(.,aes(x=band,y=refl,group=tss.bin,color=tss.bin)) +
-  ylim(0,1300) +
-  geom_line()+
-  facet_grid(quintiles~parameter) + 
-  theme(legend.position = 'top',legend.direction = 'horizontal') 
-dev.off()
+  filter(!is.na(tss.bin)) %>%
+    left_join(param.units,by='parameter') %>%
+  filter(tss.keep > 10^-2, tss.keep < 10^3.5) 
 
 
-```
 
-### Simpler breakdown
-
-```{r}
 sr.bin.wide <- sr.breakdown %>%
-  spread(key=band,value=refl) %>%
-  filter(tss.keep > 10^-2, tss.keep < 10^3.5)
-
+  spread(key=band,value=refl) 
 
 wide.tss <- sr.bin.wide %>%
   spread(key=parameter,value=value)
 
 
-green.mod <- function(df) {
-  mod <- lm(log10(value)~log10(green),data=df)
-}
-
-sed.mod <- function(df) {
-  mod <- lm(log10(value) ~ log10(tss.keep),data=df)
-}
-
-green.sed.mod <- function(df) {
-  mod <- lm(log10(value) ~ log10(green) * log10(tss.keep),data=df)
-}
-
-
-sr.bin.green <- sr.bin.wide %>%
-  group_by(parameter) %>%
-  nest() %>%
-  mutate(greenmods = map(data,green.mod)) %>%
-  mutate(sedmods = map(data,sed.mod)) %>%
-  mutate(green.sed.mod=map(data,green.sed.mod)) %>%
-  mutate(sed.pred = map2(sedmods,data,predict)) %>%
-  mutate(tidy.mod= map(green.sed.mod,glance)) 
-
-unnest(sr.bin.green,tidy.mod)
-
-library(ggpmisc)
-formula <- y ~ x
-png(filename='9_report/figures/green_param.png',width=4,height=8,res=250,units='in')
-ggplot(sr.bin.wide, aes(x=green,y=value)) +
-  geom_hex() + 
-  scale_x_log10() + 
-  scale_y_log10() + 
-  facet_wrap(~parameter,ncol=1,scales='free_y') + 
-  stat_smooth(method='lm',se=F,formula=formula) +
-  stat_poly_eq(aes(label = paste(..rr.label.., sep = "~~~")), 
-               label.x.npc = "left", label.y.npc = 0.9,
-               formula = formula, parse = TRUE, size = 3)
-dev.off()
-
-```
-
-
-```{r}
-png(filename='9_report/figures/tss_param.png',width=5,height=6,res=250,units='in')
 ggplot(sr.bin.wide %>%
          filter(parameter != 'tss'),aes(x=tss.keep,y=value)) + 
-  geom_hex(bins=30) + 
+  geom_hex(bins=40) + 
   stat_smooth(method='lm') + 
-  facet_wrap(~parameter,scales='free_y',nrow=3) + 
+  facet_wrap(~param_units,scales='free_y',nrow=1) + 
   scale_y_log10() + 
   scale_x_log10() + 
   xlab('TSS (mg/L)') + 
   ylab('Concentration') + 
-  stat_poly_eq(aes(label = paste(..rr.label.., sep = "~~~")), 
+  stat_poly_eq(aes(label = paste(..adj.rr.label.., sep = "~~~")), 
                label.x.npc = "left", label.y.npc = 0.9,
                formula = formula, parse = TRUE, size = 3)
-dev.off()
+
 ```
 
 
-```{r}
-detss <- sr.bin.green %>%
-  unnest(data,sed.pred)  %>%
-  mutate(decor.val = value-10^sed.pred)
+### TSS impacts reflectance relationships for all constituent band combinations
+```{r,fig.height=8,fig.width=10}
+band.mod <- function(df) {
+  mod <- lm(log10(value)~log10(refl),data=df)
+}
 
-plot <- sr.breakdown %>%
-         filter(tss.keep > .01,
-                tss.keep < 5000,
-                !band %in% c('swir1','swir2'))
-?scale_colour_gradient2_tableau
-names(sr.breakdown)
-png(filename='9_report/figures/tss_param.png',width=4,height=8,res=250,units='in')
-ggplot(sr.breakdown %>%
+band.sed.mod <- function(df) {
+  mod <- lm(log10(value) ~ log10(refl) * log10(tss.keep),data=df)
+}
+
+
+sr.bin.mod <- sr.breakdown %>%
+  group_by(parameter,band) %>%
+  nest() %>%
+  mutate(band.mods = map(data,band.mod)) %>%
+  mutate(band.sed.mods=map(data,band.sed.mod)) %>%
+  mutate(tidy.band.mod= map(band.mods,glance),
+         tidy.band.sed.mod=map(band.sed.mods,glance))
+
+
+mod.results <- unnest(sr.bin.mod,tidy.band.mod)  %>%
+  select(parameter,band,adj.r.squared) %>%
+  mutate(type='Band Only') %>%
+  rbind(unnest(sr.bin.mod,tidy.band.sed.mod) %>%
+          select(parameter,band,adj.r.squared) %>%
+  mutate(type='Band and TSS')) %>%
+  mutate(r2 = paste('R^2 ==',round(adj.r.squared,2))) %>%
+  mutate(x=150,
+         y=10^4.2,
+         x=ifelse(type == 'Band and TSS',1500,x)) %>%
+  filter(!band %in% c('swir1','swir2'))
+
+
+
+ggplot() +
+  geom_point(data=sr.breakdown %>%
+         arrange(date_unity) %>%
          filter(tss.keep > .01,
                 tss.keep < 5000,
                 !band %in% c('swir1','swir2')),
-       aes(x=refl,y=value,color=log10(tss.keep))) +
-  geom_point(shape=1) + 
+       aes(x=refl,y=value,color=(tss.keep)),
+       shape=1,size=.8) +
   scale_y_log10() + 
   scale_x_log10(limits=c(50,5000)) + 
-  facet_grid(parameter ~ band)+ 
+  facet_grid(parameter ~ band) + 
   scale_color_gradient2_tableau(palette = "Red-Blue", space = "rgb",
-  na.value = "grey50", guide = "colourbar",name='Log TSS')
-
-dev.off()
-
-ggthemes_data$tableau$diverging
-
+                                na.value = "grey50", guide = "colourbar",name='Log TSS',trans='log10',
+                                breaks=c(0.1,1,10,100,1000),
+                                labels=c('0.1','1','10','100','1,000')) + 
+  geom_text(data=mod.results %>%
+              filter(type == 'Band Only'),
+            aes(x,y,label=r2),size=3,parse=T) +
+  geom_text(data=mod.results %>%
+              filter(type == 'Band and TSS'),
+            aes(x,y,label=r2),size=3,parse=T,color='tan4')
 
 ```
 
 
-### Ecoregion 
-```{r}
+### Variation by ecoregion 
+```{r,fig.width=12,fig.height=8}
 
 ecoreg <- st_read('9_report/in/us_eco_l3/us_eco_l3.shp') %>%
-  st_transform(2163)
-
+    st_simplify(dTolerance=500) %>%
+  mutate(NA_L2NAME=as.character(NA_L2NAME)) %>%
+  mutate(NA_L2NAME = ifelse(NA_L2NAME=='MISSISSIPPI ALLUVIAL AND SOUTHEAST USA COASTAL PLAINS','MISSISSIPPI ALLUVIAL',NA_L2NAME)) %>%
+  group_by(NA_L2NAME) %>% 
+  summarise(m = sum(Shape_Area)) %>% 
+  st_transform(2163) 
 
 same.sf <- st_as_sf(sr.long.same %>% 
                          distinct(SiteID,long,lat),
@@ -571,45 +607,77 @@ same.sf <- st_as_sf(sr.long.same %>%
   st_transform(2163)
 
 eco.sf <- st_join(same.sf,ecoreg) %>%
-  filter(!is.na(NA_L1NAME)) %>%
+  filter(!is.na(NA_L2NAME)) %>%
   as.data.frame() %>%
   as_tibble()
 
 sr.long.sf <- left_join(sr.long.same,eco.sf,by=c('SiteID')) %>%
-  filter(!is.na(NA_L1NAME)) %>%
-  mutate(l1=factor(NA_L1NAME,levels=c('NORTH AMERICAN DESERTS','SOUTHERN SEMI-ARID HIGHLANDS','MEDITERRANEAN CALIFORNIA','GREAT PLAINS','TEMPERATE SIERRAS','EASTERN TEMPERATE FORESTS','MARINE WEST COAST FOREST','NORTHERN FORESTS','NORTHWESTERN FORESTED MOUNTAINS','TROPICAL WET FORESTS')))
+  filter(!is.na(NA_L2NAME)) %>%
+  group_by(NA_L2NAME) %>%
+  mutate(L2_count = n()) %>%
+  mutate(Region2 = paste(NA_L2NAME,L2_count))  
 
-
-png(filename='9_report/figures/ecoregion_conc.png',width=9,height=7,units='in',res=250)
-sr.long.sf %>%
-  ggplot(aes(x=l1,y=value)) + 
-  facet_wrap(~parameter,scales='free_y') + 
-  geom_boxplot() + 
-  theme(axis.text.x = element_text(angle = 30,hjust=1,size=7)) + 
-  scale_y_log10()+
-  ylab('Ecoregion Level 1 Name')
-dev.off()
-```
-
-
-
-## Simpler differentiation plots
-
-```{r}
-
-
+ecoreg.counts <- left_join(ecoreg,sr.long.sf %>%
+                             distinct(Region2,NA_L2NAME,L2_count),
+                           by='NA_L2NAME') 
+ggplot() + 
+  geom_sf(data=ecoreg.counts,aes(fill=L2_count)) +
+  scale_fill_gradient2(low='blue',mid='gray50',high='red',midpoint=log10(5000),
+                       breaks=c(10,100,1000,10000,100000),
+                       labels=c('10','100','1,000','10,000','100,000'),
+                       name='Matchups',trans='log10')
 
 
 ```
 
 
 
+### Variation in TSS by ecoregion
+```{r,fig.width=12,fig.height=8}
+
+sr.sf.breakdown <- sr.long.sf %>%
+    left_join(param.units,by='parameter') %>%
+  filter(tss.keep > 10^-2, tss.keep < 10^3.5)  %>%
+  filter(L2_count > 50000)
+
+ggplot(sr.sf.breakdown %>%
+         filter(parameter != 'tss',
+                !is.na(tss.bin)),
+       aes(x=tss.keep,y=value)) + 
+  geom_hex(bins=40) + 
+  stat_smooth(method='lm') + 
+  facet_grid(param_units~Region2) + 
+  scale_y_log10() + 
+  scale_x_log10() + 
+  xlab('TSS (mg/L)') + 
+  ylab('Concentration')
+```
 
 
-## What can we do with this data? 
+### Variation in spectral response by ecoregion
+```{r,fig.width=14,fig.height=10}
+ggplot(sr.sf.breakdown %>%
+         arrange(date_unity) %>%
+         filter(!band %in% c('swir1','swir2')),aes(x=refl,y=value,color=Region2)) +
+  geom_point(shape=1,size=.5) +
+  scale_x_log10() + 
+  scale_y_log10() + 
+  facet_grid(parameter~band) + 
+  stat_smooth(method='lm',se=F,fullrange=T) +
+  scale_color_few()
 
 
-```{r}
+
+```
+
+
+
+
+# Supplementary
+
+## Ecoregion models
+
+```{r, eval=F}
 sr.sf.wide <- spread(sr.long.sf,key=band,value=refl) 
 
 tss.wide <- sr.sf.wide %>%
@@ -650,7 +718,7 @@ eco.mods <- tss.wide %>%
 ```
 
 
-```{r}
+```{r, eval=F}
 big.rivers <- st_read('9_report/in/ne_10m_rivers_lake_centerlines/ne_10m_rivers_lake_centerlines.shp') %>%
   st_transform(2163) 
 
@@ -722,8 +790,8 @@ print(big.river.mods[1:10,])
 ```
 
 
-## Mississipip Basin Example
-```{r}
+### Mississippi Basin Example
+```{r eval=F}
 miss <- big.river.join %>%
   filter(name == 'Mississippi') %>%
   as.data.frame(.) %>%
@@ -741,15 +809,9 @@ ggplot(miss,aes(x=brightness,y=tss,color=log10(nir))) +
 
 
 
-## Dominant signals
-
-
-
-# Supplementary stuff
-
 ### Spectral medians captured at sample sites
 
-```{r}
+```{r,eval=F}
 
 band.cols <- c('blue2','green3','red','red3','gray50','black')
 
@@ -773,7 +835,7 @@ sr.long.median %>%
 
 
 ### Spectral variation captured by our circles 
-```{r,fig.width=7}
+```{r, eval=F, fig.width=7}
 sr.long.sd <- sr.type %>%
   mutate(blue_cv = blue_sd/blue,
          green_cv= green_sd/green,
@@ -804,7 +866,7 @@ sr.long.sd %>%
 
 ### Lots of PCA analyses
 
-```{r}
+```{r,eval=F}
 
 
 no.zero.sameday <- sr.type %>%
@@ -864,7 +926,7 @@ no.zero.clusters %>%
 
 
 ### Clusters mapped onto tss doc plot. 
-```{r}
+```{r,eval=F}
 ggplot() +
   geom_point(data=simultaneous.wide,aes(x=tss,y=doc,color=cluster),shape=1) + 
   scale_x_log10() + 
@@ -873,7 +935,7 @@ ggplot() +
 
 ```
 
-```{r eval=F, fig.width=8,fig.height=6}
+```{r, eval=F, fig.width=8,fig.height=6}
 library(ggpubr)
 width.boxplotter <- function(param) {
   sr.long.same %>%
@@ -901,7 +963,6 @@ ggarrange(chl_a.g + rremove('xlab'),doc.g,secchi.g,tss.g,
          ncol=2,nrow=2)
 
 dev.off()
-
 
 
 ```
