--- a/1_wqdata/src/4_wqp_lagos_merge.Rmd
+++ b/1_wqdata/src/4_wqp_lagos_merge.Rmd
@@ -186,7 +186,7 @@ wqp.lagos <- rbind(wqp.wide,lagos.unity)
 
 write_feather(wqp.lagos,path='1_wqdata/out/wqp_lagos_unity.feather')
 
-wqp.lagos <- read_feather('1_wqdata/out/wqp_lagos_unity.feather')
+gd_put('1_wqdata/out/wqp_lagos_unity.feather.ind', local_source = '1_wqdata/out/wqp_lagos_unity.feather')
 
 ```
 
