--- a/1_wqdata/src/2_combined_wqp_munge.Rmd
+++ b/1_wqdata/src/2_combined_wqp_munge.Rmd
@@ -35,84 +35,7 @@ The vast majority of water quality portal data (> 80% ) that we have gathered is
 
 ```{r functions}
 
-#We need to split the data into two datasets. One with date and time and one with just date. 
-#This takes kind of a long time so we will use foreach to run the analyses in parallel. 
-
-
-#single and multiple obs harmonization that will live inside the next function. 
-pluribus <- function(dt,x,...){
-  #seperate out the data that has only 1 obs at unique site, datetime, and parameter combination. 
-  #This should be most data and will simply be kept. 
-  
-  dt.not.unique <- dt %>%
-    select_('SiteID','harmonized_parameter',...) %>%
-    filter(duplicated(.))
-  
-  dt.singles <- dt %>%
-    anti_join(dt.not.unique)
-  
-  #Okay lots of thos have the same exact information. 
-  #We can get rid of those kinds of duplicates with a simple distinct call
-  dt.distinct.okay <- dt %>%
-    inner_join(dt.not.unique) %>% 
-    filter(duplicated(.)) 
-
-  dt.distinct.not.okay <- dt %>%
-    inner_join(dt.not.unique) %>%
-    anti_join(dt.distinct.okay %>%
-                select_('SiteID','harmonized_parameter',...))
-
-  #What should we do with multiple data for the same site, time, and parameter? 
-  dt.multiples <- dt.distinct.not.okay %>%
-    inner_join(dt.not.unique) %>%
-    #The dots are so that the user can switch between datetime or date
-    group_by_('SiteID','harmonized_parameter',...) %>%
-    #Get the median and cv
-    mutate(count=n(),
-           median=median(harmonized_value),
-           cv=sd(harmonized_value)/mean(harmonized_value)) %>%
-    #Remove sites with cvs greater than 0.1
-    filter(count < x) %>%
-    filter(cv < 0.1) %>%
-    #Keep only a single observation with unique combinations
-    distinct_('SiteID','harmonized_parameter',.keep_all=T,...) %>%
-    mutate(harmonized_value = median) %>%
-    dplyr::select(-median,-cv,-count) %>%
-    ungroup()
-  
-  return(rbind(dt.singles,dt.distinct.okay,dt.multiples) %>%
-           #Last bit of paranoia to catch any NAs or doubles that sneak through
-           distinct_('SiteID','harmonized_parameter',...,.keep_all=T))
-}
-
-
-#Function to split out data with date_time or date and time. 
- 
-date.time.splitter<- function(file) {
-  df <- read_feather(file)
-  #Add an index and remove nas
-  dt <- df %>% 
-    #Filter out data that has no date_time OR time data
-    filter(!is.na(date_time))
-
-  #Date only data
-  d <- df %>%
-    filter(!index %in% dt$index) 
-    
-  dt.final <- pluribus(dt,5,'date_time')
-  d.final <- pluribus(d,20,'date')
-  
-
-  #Put these two datasets into a list
-  out <- rbind(dt.final,d.final) %>%
-    dplyr::select(-index)
-  
-  print(paste('You dropped',round((nrow(df)-nrow(out))/nrow(df),2),'% of data because the number of replicates on the same day was too high or simultaneous observations varied too much'))
-  
-return(out)
-}
-
-
+source('1_wqdata/src/merge_unity_functions.R')
 
 ```
 
@@ -122,16 +45,13 @@ return(out)
 #Setup paths for reading in data
 harmonized.files <- list.files('1_wqdata/tmp/harmonized',full.names =T)
 
+
+
 #make a vector of names
-file.names <- c('chl.a','doc','sand','secchi','tis','tss1','tss2')
+file.names <- c('chl.a','doc','sand','secchi','tis','tss')
 
+#Combine into a tibble
 file.df.all <- tibble(path=harmonized.files,names=file.names)
-```
-
-
-```{r}
-secchi_unity <- date.time.splitter(file.df.all$path[4])
-
 ```
 
 
@@ -139,28 +59,19 @@ secchi_unity <- date.time.splitter(file.df.all$path[4])
 ### Dropping and taking median of all samples
 
 
-```{r,eval=F}
-#make a cluster with the same number of cores as the harmonized.dataset list or the total cores on the machine 
+```{r}
 
-#Intermediate code to remove files that were already downloaded this should be remaked 
-done <- str_split_fixed(list.files('1_wqdata/out/unity'),'_',2)[,1]
+#Loop over the various parameters and unify the date_time and date results. 
+# The meat of these functions is in 1_wqdata/src/merge_unity_functions
+for(i in 1:nrow(file.df.all)) {
+  df <- read_feather(file.df.all$path[i])
+  out <- date.time.splitter(df)
+write_feather(out,path=paste0('1_wqdata/out/unity/',
+                              file.df.all$names[i],'_unity.feather'))
 
-file.df <- file.df.all %>%
-  filter(!names %in% done)
-
-# cores = ifelse(nrow(file.df) < detectCores(), nrow(file.df),detectCores()-1)
-# cl <- makeCluster(cores) 
-# registerDoParallel(cl,cores=cores) 
-foreach(i = 1:nrow(file.df)) %do% {
-  print(i)
-  library('lubridate')
-  library('tidyverse')
-  library('feather')
-  out <- date.time.splitter(file.df$path[i])
-  write_feather(out,path=paste0('1_wqdata/out/unity/',
-                                file.df$names[i],'_unity.feather'))
+rm(out,df)
+gc()
 }
-#stopCluster(cl)
 
 ```
 
